# python_test_task

./: .dockerignore  .env.default  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: conftest.py
src/config/: settings.py  urls.py
src/core/: admin.py  api.py  constants.py  interfaces.py  models.py  services.py  tasks.py  urls.py
src/core/domain/: __init__.py  exceptions.py  exchange_rates.py
src/core/migrations/: 0001_initial.py
src/core/tests/: conftest.py  test_apis.py
src/shared/: env_parser.py  utils.py
